--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
     <script>
       WCT.loadSuites([
+
         //complete tests
 
         //default page tests
@@ -32,16 +33,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         //'def-login.html?dom=shadow',
         //'def-home.html?dom=shady',
         //'def-home.html?dom=shadow',
-        //'su-pre.html?dom=shady',
-        //'su-pre.html?dom=shadow',
-        'su-care.html?dom=shady',
-        'su-care.html?dom=shadow',
 
         //care-plan page tests
         //'su-profile.html?dom=shady',
         //'su-profile.html?dom=shadow',
         //'su-create.html?dom=shady',
         //'su-create.html?dom=shadow',
+        //'su-pre.html?dom=shady',
+        //'su-pre.html?dom=shadow',
+        //'su-care.html?dom=shady',
+        //'su-care.html?dom=shadow',
+
+        //need to figure out a way of imperitively declaring a file to upload and test
+        //'su-medical.html?dom=shady',
+        //'su-medical.html?dom=shadow',
+
+        //date computes arent done for these... not really sure what ther is to test here other than class updates which are done
+        //'su-monthly-reports.html?dom=shady',
+        //'su-monthly-reports.html?dom=shadow',
+        //'su-reports.html?dom=shady',
+        //'su-reports.html?dom=shadow',
+        'su-view-reports.html?dom=shady',
+        'su-view-reports.html?dom=shadow',
 
         //'su-care-review-edit-view.html?dom=shady',
         //'su-care-review-edit-view.html?dom=shadow',
@@ -49,7 +62,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         //'su-care-review-multi-view.html?dom=shadow',
         //'su-care-review.html?dom=shady',
         //'su-care-review.html?dom=shadow',
-
 
         /*
         //incomplete tests
@@ -61,23 +73,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         'su-goals-multi-view.html?dom=shadow',
         'su-goals.html?dom=shady',
         'su-goals.html?dom=shadow',
-        'su-medical.html?dom=shady',
-        'su-medical.html?dom=shadow',
         'su-medication.html?dom=shady',
         'su-medication.html?dom=shadow',
-        'su-monthly-reports.html?dom=shady',
-        'su-monthly-reports.html?dom=shadow',
-
-        'su-reports.html?dom=shady',
-        'su-reports.html?dom=shadow',
         'su-risk-edit-view.html?dom=shady',
         'su-risk-edit-view.html?dom=shadow',
         'su-risk-multi-view.html?dom=shady',
         'su-risk-multi-view.html?dom=shadow',
         'su-risk.html?dom=shady',
         'su-risk.html?dom=shadow',
-        'su-view-reports.html?dom=shady',
-        'su-view-reports.html?dom=shadow',
 
         //app shell tests
         'my-app.html?dom=shady',
