--- a/test/index.html
+++ b/test/index.html
@@ -53,8 +53,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         //'su-monthly-reports.html?dom=shadow',
         //'su-reports.html?dom=shady',
         //'su-reports.html?dom=shadow',
-        'su-view-reports.html?dom=shady',
-        'su-view-reports.html?dom=shadow',
+
+        //'su-view-reports.html?dom=shady',
+        //'su-view-reports.html?dom=shadow',
+        'su-medication.html?dom=shady',
+        'su-medication.html?dom=shadow',
 
         //'su-care-review-edit-view.html?dom=shady',
         //'su-care-review-edit-view.html?dom=shadow',
@@ -73,8 +76,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         'su-goals-multi-view.html?dom=shadow',
         'su-goals.html?dom=shady',
         'su-goals.html?dom=shadow',
-        'su-medication.html?dom=shady',
-        'su-medication.html?dom=shadow',
         'su-risk-edit-view.html?dom=shady',
         'su-risk-edit-view.html?dom=shadow',
         'su-risk-multi-view.html?dom=shady',
